# py-LabUnAL

./: .pre-commit-config.yaml  .travis.yml  README.md  environment.yml  pyproject.toml
dataset/: pre-processing.py
dataset/blueriver/GreenwayAR/0629/1/filenames/: seed_train_frames.txt  test_frames.txt  train_frames.txt  val_frames.txt
docs/: conf.py  index.rst
py-LabUnAL_pkg/: __init__.py  cli.py
src/: active_selection.py  annotation_utils.py  constants.py  dataloader.py  image_transforms.py  train_active.py  trainer.py  utils.py
src/model/: aspp.py  decoder.py  deeplab.py
src/model/backbone/: __init__.py  drn.py  mobilenet.py  resnet.py  xception.py
src/model/sync_batchnorm/: batchnorm.py
